--- a/index.html
+++ b/index.html
@@ -60,8 +60,22 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Alae Eddine</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Freelancer, artist"></span></p>
+      <style>
+        /* Styles specific to this section */
+        h2 {
+          margin-bottom: 10px; /* Adjust the margin as needed */
+        }
+  
+        .social-links {
+          margin-bottom: 15px; /* Adjust the margin as needed */
+        }
+  
+        .additional-button {
+          margin-top: 10px; /* Adjust the margin as needed */
+        }
+      </style>
+      <h1>Taiess art</h1>
+      <p>I'm <span class="typed" data-typed-items="Designer, Freelancer, 3D artist"></span></p>
       <div class="social-links">
         <a href="https://web.facebook.com/profile.php?id=100086496341644" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/taiess_art/" class="instagram"><i class="bx bxl-instagram"></i></a>
